--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       text-align: center;
       margin: 0;
       padding: 20px;
-      background-image: url('https://wallpapercave.com/wp/wp5128415.jpg');
+      background-image: url('https://files.catbox.moe/hsr22j.jpg');
       background-size: cover;
       background-attachment: fixed;
       color: #fff;
@@ -69,17 +69,19 @@
     <img src="https://img1.pixhost.to/images/7255/622646525_skyzopedia.jpg" class="logo" alt="Logo FYXZ" />
     <h2>FYXZ PEDIA DEVELOPER</h2>
     <p><strong>Alamat:</strong> Indonesia</p>
-    <p><strong>Email:</strong> kamu@email.com</p>
+    <p><strong>Email:</strong> pnhe371@gmail.com</p>
 
-    <a href="https://wa.me/6281234567890" target="_blank">
+    <a href="https://wa.me/6283153883125" target="_blank">
       <button>Hubungi via WhatsApp</button>
+      <a href="https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k" target="_blank">
+      <button>Saluran Testimoni</button>
     </a>
 
     <button class="qris-btn" onclick="showQRIS()">Tampilkan QRIS & Rekening</button>
 
     <div id="qrisSection" class="hidden">
       <img src="https://files.catbox.moe/49y4g8.jpg" alt="QRIS" class="qris-image" />
-      <p><strong>No. Rekening:</strong> 1234567890 a/n Nama Kamu</p>
+      <p><strong>No. Rekening Dana:</strong> 085198699020 a/n AKHMAD KUSAERI</p>
     </div>
   </div>
 
