--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
   <div class="container">
     <img src="https://img1.pixhost.to/images/7255/622646525_skyzopedia.jpg" class="logo" alt="Logo FYXZ" />
     <h2>FYXZ PEDIA DEVELOPER</h2>
-    <p><strong>Alamat:</strong> Indonesia</p>
-    <p><strong>Portofolio:</strong>/n128,69 USD$/n2.096.614,63 IDR</p>
-    <p><strong>Email:</strong> pnhe371@gmail.com</p>
+    <p><strong>🌐Alamat:</strong> Indonesia</p>
+    <p><strong>💸Portofolio:</strong>/128,69 USD$ / 2.096.614,63 IDR</p>
+    <p><strong>☕Email:</strong> pnhe371@gmail.com</p>
 
     <a href="https://wa.me/6283153883125" target="_blank">
       <button>Hubungi via WhatsApp</button>
