--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       text-align: center;
       margin: 0;
       padding: 20px;
-      background-image: url('https://files.catbox.moe/hsr22j.jpg');
+      background-image: url('https://files.catbox.moe/q4u6w2.jpg');
       background-size: cover;
       background-attachment: fixed;
       color: #fff;
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://img1.pixhost.to/images/7255/622646525_skyzopedia.jpg" class="logo" alt="Logo FYXZ" />
+    <img src="https://files.catbox.moe/uj8gwl.jpg" class="logo" alt="Logo FYXZ" />
     <h2>FYXZ PEDIA DEVELOPER</h2>
     <p><strong>🌐Alamat:</strong> Indonesia</p>
     <p><strong>💸Portofolio:</strong>/128,69 USD$ / 2.096.614,63 IDR</p>
