--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       padding: 20px;
       max-width: 500px;
       margin: auto;
-      box-shadow: 0 0 10px #000;
+      box-shadow: 0 0 7px #000;
     }
 
     img.logo {
@@ -73,9 +73,11 @@
     <p><strong>☕Email:</strong> pnhe371@gmail.com</p>
 
     <a href="https://wa.me/6283153883125" target="_blank">
-      <button>Hubungi via WhatsApp</button>
+      <button>Hubungi via WhatsApp👤</button>
       <a href="https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k" target="_blank">
-      <button>Saluran Testimoni</button>
+      <button>Link Script Free🔗</button>
+      <a href="https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k" target="_blank">
+      <button>Saluran Testimoni🛍</button>
     </a>
 
     <button class="qris-btn" onclick="showQRIS()">Tampilkan QRIS & Rekening</button>
