--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <img src="https://files.catbox.moe/uj8gwl.jpg" class="logo" alt="Logo FYXZ" />
     <h2>FYXZ PEDIA DEVELOPER</h2>
     <p><strong>🌐Alamat:</strong> Indonesia</p>
-    <p><strong>💸Portofolio:</strong>/128,69 USD$ / 2.096.614,63 IDR</p>
+    <p><strong>💸Portofolio:</strong>
+      128,69 USD$ / 2.096.614,63 IDR</p>
     <p><strong>☕Email:</strong> pnhe371@gmail.com</p>
 
     <a href="https://wa.me/6283153883125" target="_blank">
