--- a/index.html
+++ b/index.html
@@ -1,16 +1,151 @@
-<html>
+<!DOCTYPE html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Profil Bisnis</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: url('LINK_GAMBAR_BACKGROUND') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+    }
+
+    .overlay {
+      background: rgba(0, 0, 0, 0.4);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      backdrop-filter: blur(5px);
+    }
+
+    .logo-container {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 20px;
+      border-radius: 20px;
+      animation: fadeInDown 1s ease;
+    }
+
+    .logo-container img {
+      width: 120px;
+      height: 120px;
+      object-fit: contain;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+
+    .nama {
+      font-size: 24px;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    .desc {
+      font-size: 16px;
+      opacity: 0.85;
+    }
+
+    .buttons {
+      margin-top: 30px;
+      display: flex;
+      gap: 15px;
+      flex-wrap: wrap;
+      justify-content: center;
+      animation: fadeInUp 1.2s ease;
+    }
+
+    .btn {
+      background: #25d366;
+      border: none;
+      padding: 12px 24px;
+      color: white;
+      border-radius: 30px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    }
+
+    .btn:hover {
+      transform: scale(1.05);
+      background: #1ebe5a;
+    }
+
+    .qris-popup {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      background: rgba(0, 0, 0, 0.9);
+      padding: 25px;
+      border-radius: 15px;
+      text-align: center;
+      z-index: 999;
+      transition: transform 0.4s ease;
+    }
+
+    .qris-popup.show {
+      transform: translate(-50%, -50%) scale(1);
+    }
+
+    .qris-popup img {
+      width: 200px;
+      margin-bottom: 15px;
+    }
+
+    .close-btn {
+      margin-top: 10px;
+      padding: 8px 20px;
+      border: none;
+      border-radius: 20px;
+      background: crimson;
+      color: white;
+      cursor: pointer;
+    }
+
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body>
 
-<script type="text/javascript">
-<!-- 
-eval(unescape('%66%75%6e%63%74%69%6f%6e%20%6a%38%35%30%35%33%65%36%63%28%73%29%20%7b%0a%09%76%61%72%20%72%20%3d%20%22%22%3b%0a%09%76%61%72%20%74%6d%70%20%3d%20%73%2e%73%70%6c%69%74%28%22%31%35%39%32%37%34%39%35%22%29%3b%0a%09%73%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%30%5d%29%3b%0a%09%6b%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%31%5d%20%2b%20%22%38%38%30%38%33%39%22%29%3b%0a%09%66%6f%72%28%20%76%61%72%20%69%20%3d%20%30%3b%20%69%20%3c%20%73%2e%6c%65%6e%67%74%68%3b%20%69%2b%2b%29%20%7b%0a%09%09%72%20%2b%3d%20%53%74%72%69%6e%67%2e%66%72%6f%6d%43%68%61%72%43%6f%64%65%28%28%70%61%72%73%65%49%6e%74%28%6b%2e%63%68%61%72%41%74%28%69%25%6b%2e%6c%65%6e%67%74%68%29%29%5e%73%2e%63%68%61%72%43%6f%64%65%41%74%28%69%29%29%2b%30%29%3b%0a%09%7d%0a%09%72%65%74%75%72%6e%20%72%3b%0a%7d%0a'));
-eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%6a%38%35%30%35%33%65%36%63%28%27') + '%39%29%4c%4f%47%53%50%58%4d%20%60%77%64%69%36%05%0a%38%6f%7d%65%64%20%64%62%67%62%35%2a%69%60%25%37%05%02%3c%60%66%68%61%36%05%0a%24%27%35%65%6d%74%69%23%6a%6d%69%7a%73%61%73%34%2a%5d%54%4e%2e%31%27%28%27%3e%09%0d%29%28%34%6d%6d%77%68%25%66%69%6d%61%3a%2b%7e%61%65%7f%73%66%77%7c%2a%20%67%68%67%7c%6d%6e%7c%3e%2b%72%61%6c%74%6c%3a%6d%6d%7e%69%6b%66%24%72%61%6c%74%6c%2b%29%61%66%69%7c%6a%68%69%25%7b%63%65%6b%6c%35%39%22%28%2c%37%08%02%28%20%38%73%60%7c%64%65%36%45%50%5d%52%28%50%41%43%40%49%28%44%4d%55%4c%49%47%58%45%56%3b%26%7c%61%74%64%66%37%08%02%28%20%38%74%7d%71%64%65%36%0e%03%25%28%28%20%66%68%6d%71%28%7b%05%09%29%25%28%28%20%24%61%66%66%7c%2d%6e%62%64%6c%64%71%3a%24%20%48%7a%61%61%64%24%25%25%7b%69%6e%77%2a%7a%6d%7a%69%6e%38%04%0f%28%28%20%24%27%29%6a%69%63%63%64%7b%6a%7d%66%64%3e%27%2a%6e%3c%66%3c%65%3d%3e%05%02%20%24%27%29%28%28%74%6d%7b%7d%28%69%64%69%63%69%33%28%6b%65%66%77%6c%77%33%05%0a%24%27%29%28%28%20%65%62%7b%62%61%66%3a%24%37%32%05%02%20%28%23%29%25%28%78%61%60%63%60%66%6f%3a%28%31%39%75%70%33%0d%0e%27%29%28%28%20%28%61%68%66%63%6f%72%6b%72%67%6c%25%69%65%62%6e%60%32%28%75%76%6b%21%2f%60%74%7c%73%7a%3f%27%27%66%6d%6b%6c%7b%26%63%69%77%6b%6a%70%26%6d%6b%62%26%79%3c%75%3e%74%3b%2b%62%78%67%23%2e%32%05%02%20%28%23%29%25%28%6a%61%67%6c%6e%7a%67%75%66%67%24%76%61%72%65%3e%27%6a%67%7e%65%7a%38%04%0f%28%28%20%24%27%29%6a%69%63%63%64%7b%6a%7d%66%64%29%66%7d%7c%69%63%60%6e%6c%6b%7c%32%20%62%6e%71%6d%6c%3b%05%09%29%25%28%28%20%24%64%66%64%67%72%32%23%2a%63%6e%6e%3b%09%0d%29%28%28%20%75%0e%03%08%02%28%20%24%27%27%6b%67%6e%7c%62%60%6b%6d%7a%20%7f%0a%03%28%28%20%28%23%29%67%69%6b%6b%63%75%66%7d%66%64%25%60%66%69%67%7a%3a%24%75%6e%6a%69%28%38%2f%29%35%24%28%30%28%27%39%26%3f%29%33%0e%03%25%28%28%20%24%27%6b%67%7a%64%6d%71%24%77%69%6c%69%71%74%33%28%39%35%78%7b%32%08%02%28%20%24%27%29%28%78%61%6c%67%60%6b%6f%32%20%36%37%79%70%33%0d%02%23%29%25%28%28%20%69%66%71%25%7f%69%6c%77%61%3f%28%3d%30%34%77%71%33%05%0a%28%23%29%25%28%28%6d%65%75%6e%61%66%3a%28%62%7c%71%67%33%0d%0e%27%29%28%28%20%28%61%66%7d%25%7b%68%65%63%66%7f%32%20%38%23%39%25%3f%78%78%24%24%39%38%38%3b%05%09%29%25%28%28%7d%09%0d%04%02%28%20%28%23%60%68%6f%26%6c%6b%60%66%28%73%0d%02%23%29%25%28%28%20%69%66%71%25%7f%69%6c%77%61%3f%28%39%35%34%77%71%33%05%0a%28%23%29%25%28%28%62%6b%75%6d%6d%7a%2d%7a%62%6d%6c%7d%7b%3a%24%32%39%2d%33%0d%02%23%29%25%28%28%20%69%66%7b%6f%61%6e%25%61%66%71%7c%67%6d%3e%27%3b%38%78%78%33%0e%03%25%28%28%20%79%0a%03%05%02%20%28%23%29%67%7d%7c%74%6b%69%29%73%05%0a%28%23%29%25%28%28%62%65%64%62%6f%7a%6f%7d%6d%6d%28%6b%67%6c%6b%75%33%28%2b%32%3d%47%3a%33%3e%33%0d%0e%27%29%28%28%20%28%61%66%77%6c%6d%72%3e%27%67%67%66%65%33%0e%03%25%28%28%20%24%27%6a%67%64%6f%7a%39%29%72%60%61%74%61%3c%04%02%28%20%28%23%29%25%78%69%64%60%6e%67%6f%32%20%39%31%79%7d%28%3a%30%74%7f%32%05%02%20%28%23%29%25%28%65%61%76%60%60%66%32%20%39%33%79%7d%33%05%0a%24%27%29%28%28%20%6a%6c%7b%61%6d%7a%2d%76%66%6d%61%7d%73%32%23%38%35%78%70%3b%09%0d%29%28%28%20%28%23%6f%6a%66%7c%2d%77%6e%73%6d%32%20%39%35%79%7d%33%05%0a%24%27%29%28%28%20%6b%76%7b%76%67%7a%3a%24%77%66%61%66%74%6d%71%32%08%02%28%20%24%27%74%05%02%0d%02%23%29%25%28%6a%75%70%73%66%66%26%71%7a%6a%7a%28%6a%7c%6e%24%7c%04%02%28%20%28%23%29%25%6a%69%63%6f%60%7b%67%7d%6e%6c%2e%6a%6a%64%67%72%3e%27%2a%6e%6e%39%30%33%39%3e%05%02%20%24%27%29%75%05%0a%05%09%29%25%28%28%2e%6c%6e%6d%6c%6d%6e%28%78%04%0f%28%28%20%24%27%29%6c%61%73%78%6f%68%7c%32%28%6e%6b%69%6c%33%05%0a%28%23%29%25%28%28%6d%65%75%6e%61%66%2d%7c%6c%79%3f%28%39%35%74%7f%32%05%02%20%28%23%29%78%05%02%0d%0e%27%29%28%28%2e%79%71%60%76%25%61%6d%65%60%6c%28%73%0d%02%23%29%25%28%28%20%69%66%71%25%7f%69%6c%77%61%3f%28%39%30%34%22%32%05%02%20%28%23%29%25%28%6a%6f%76%63%6c%7a%25%72%69%67%60%70%7b%32%20%35%37%79%70%33%0d%02%23%29%25%28%28%20%69%66%7b%6f%61%6e%25%77%66%75%32%28%31%34%77%71%33%05%0a%28%23%29%25%75%05%0a%09%0d%29%28%28%20%69%76%6d%6c%67%28%7b%09%0d%29%28%28%20%28%23%6d%6c%7b%78%6c%65%7e%33%28%66%6f%66%66%32%08%02%28%20%24%27%74%05%02%20%28%3f%26%76%7c%71%6c%61%39%04%02%34%2f%60%66%68%61%36%05%0a%38%65%66%6c%71%3e%05%09%29%25%34%6c%69%72%27%6a%64%69%73%7b%3e%2b%66%67%66%74%65%6e%67%6d%7a%22%36%0e%03%25%28%28%20%38%6e%64%6f%28%73%7a%60%34%27%60%7c%74%74%74%33%27%27%66%61%6f%6c%76%26%6b%61%70%65%66%70%26%6d%67%66%26%70%62%30%67%73%6b%27%62%78%67%2a%23%6a%69%69%7b%73%39%25%65%67%6f%6f%2a%23%68%69%7c%35%22%48%68%6e%67%28%46%51%5b%53%27%28%27%3e%09%0d%29%28%28%20%34%6b%3b%3b%4e%51%58%5e%27%59%4d%4c%49%49%23%4d%40%5e%4d%4c%4b%57%4c%5a%34%2f%60%31%37%08%02%28%20%24%27%35%78%36%3c%7b%77%7b%6a%66%6f%3e%f4%98%85%98%49%6c%69%6e%68%71%32%34%2f%77%73%7b%67%66%67%36%23%40%6b%6c%67%6e%61%74%60%69%34%2f%78%3d%04%0f%28%28%20%24%3b%79%36%34%73%7c%71%66%6b%6f%36%f0%9b%95%b1%58%67%72%7c%6c%6f%6a%64%61%6f%3e%3b%26%7b%7c%72%67%6d%6e%3b%05%02%20%24%27%29%28%28%31%3a%3b%25%33%31%28%55%57%43%2d%28%27%20%3a%2d%39%3c%3e%26%36%35%33%25%3e%3b%20%41%47%5b%39%27%78%3e%09%0d%29%28%28%20%34%73%37%39%7b%7c%72%6b%69%6e%36%ea%98%9d%46%64%64%61%64%3a%38%28%7a%7c%7a%6f%66%64%37%25%78%66%68%61%34%3e%39%48%67%65%62%60%69%26%6b%6f%69%3b%26%78%36%0d%02%0e%03%25%28%28%20%38%66%29%60%7a%65%6e%3e%2b%6d%7c%7c%70%77%3d%26%27%7f%61%26%6e%6c%2a%3e%3a%38%37%36%3c%3b%30%38%3b%32%3b%30%2a%28%74%65%75%6e%6d%7c%3d%2a%5c%6b%69%69%66%6b%26%39%04%02%28%20%28%23%29%25%34%6a%75%70%73%66%66%36%48%7d%61%7c%6b%6f%61%20%72%6e%68%28%5f%68%69%77%7a%44%78%78%f0%9b%96%ad%34%27%62%7d%77%7d%6a%66%36%0d%0e%27%29%28%28%20%28%3f%68%25%60%7a%65%62%3a%2b%60%7c%74%78%70%33%2a%27%7f%68%65%73%7a%69%78%70%26%60%66%68%27%6b%68%65%69%67%6d%64%2f%38%33%3b%3c%5e%6a%32%66%70%5b%64%44%59%3e%67%39%69%62%50%6c%4a%75%39%63%2a%20%7c%62%7b%62%6d%7c%3d%26%58%6b%64%69%6e%63%21%37%08%02%28%20%24%27%29%28%34%62%7d%77%7d%6a%66%36%4c%6d%69%62%28%5b%63%7a%6a%79%71%28%4e%72%61%62%f9%97%9c%97%34%2c%6b%70%7c%7c%6f%6a%39%04%02%28%20%28%23%29%25%34%69%20%6c%75%6c%6e%35%22%60%77%7d%75%7b%32%2f%2b%70%61%69%7c%73%69%73%79%2b%6b%67%6d%2b%64%61%69%66%6e%6d%6f%26%35%38%3a%39%52%65%3b%6a%7f%52%64%4f%50%33%6c%38%6c%6e%5f%65%46%7a%30%63%21%29%71%69%7a%67%61%73%34%2a%57%62%64%62%67%6e%2a%36%0d%0e%27%29%28%28%20%28%3f%6b%70%7c%7c%6f%6a%39%5a%69%64%75%7a%62%67%25%5c%6d%73%70%6e%64%67%66%69%f8%9c%92%88%34%27%62%71%73%7d%67%66%3e%05%09%29%25%28%28%3c%2b%66%37%05%02%0d%02%23%29%25%28%34%62%71%73%7d%67%66%20%6b%6f%68%76%7b%35%22%75%75%60%7b%25%62%7c%6d%2b%25%67%66%63%68%6e%6a%63%35%22%7b%6b%66%72%59%5a%49%57%2f%20%2a%36%54%69%6e%79%6c%64%63%61%6a%27%58%5a%41%53%28%25%29%57%6d%63%65%6a%6e%67%6f%34%2f%6a%76%7d%71%67%66%3e%09%0d%04%02%28%20%28%23%35%61%61%7e%20%6d%63%34%2a%79%72%61%70%5a%60%6b%7c%69%6b%69%2b%28%6b%6c%69%70%7a%38%2a%60%69%60%63%6c%66%2a%3e%05%09%29%25%28%28%20%24%3b%60%65%6f%20%7b%71%6a%38%2a%60%74%70%77%7a%32%27%2f%6e%6a%65%60%7b%26%63%65%73%6b%67%70%2e%65%6c%6c%2a%3c%31%79%30%60%31%26%62%70%6f%21%29%64%64%7c%3d%26%56%5b%41%5b%22%28%60%65%64%7b%7b%3d%26%76%7b%61%7b%2d%61%6e%68%62%6d%2a%20%2b%39%04%02%28%20%28%23%29%25%34%78%3e%38%74%7d%7a%67%6e%6f%3d%47%6a%26%28%52%61%6c%6c%66%61%6e%6f%23%4d%64%66%69%3a%38%28%7a%7c%7a%6f%66%64%37%25%38%30%35%35%3e%31%3e%31%39%38%31%39%25%69%27%6e%24%46%42%40%45%41%4c%23%42%50%5b%49%45%56%4e%35%27%78%3e%05%09%29%25%28%28%3c%2b%63%60%7e%36%0d%02%23%29%39%27%6c%69%72%39%04%02%05%0a%28%23%35%64%7d%6c%69%6b%27%68%7d%7c%6f%78%6f%68%7c%28%64%6f%6b%77%37%05%02%20%28%23%29%39%7b%67%75%76%64%6c%28%7b%72%6b%3e%2b%6d%7c%7c%70%77%3d%26%27%6e%69%64%66%7a%2b%6b%69%74%66%68%71%26%65%6f%6d%2c%30%68%38%63%6a%69%29%64%78%3c%22%28%77%70%75%6d%35%22%65%72%6d%61%67%2f%65%73%3d%27%28%27%3e%09%0d%29%28%34%2f%69%76%6d%6c%67%36%0d%0e%0a%03%28%28%3c%7b%60%7b%6c%78%7c%3e%09%0d%29%28%28%20%6e%76%67%66%7c%61%6f%6a%27%7a%60%67%77%59%51%40%56%20%21%20%7f%0a%03%28%28%20%28%23%29%61%67%6b%75%69%62%67%7c%26%67%6d%77%4c%69%6d%65%65%6a%73%4b%71%41%64%20%21%78%77%61%7b%53%61%64%7d%61%67%6e%2a%2a%27%66%64%69%73%77%4b%60%7b%7c%2e%7c%6c%6e%62%64%6d%28%26%6f%60%6c%6c%65%66%21%20%3e%05%02%20%24%27%29%75%05%0a%28%23%35%2a%7b%6b%72%6d%77%7d%36%05%0a%34%2c%6b%6a%6c%71%3e%09%0d%35%27%60%74%65%6f%3715927495%35%38%38%30%34%37%39' + unescape('%27%29%29%3b'));
-// -->
+<div class="overlay">
+  <div class="logo-container">
+    <img src="LINK_GAMBAR_LOGO" alt="Logo">
+    <div class="nama">Nama Anda</div>
+    <div class="desc">Deskripsi singkat tentang bisnis atau diri Anda</div>
+  </div>
+
+  <div class="buttons">
+    <button class="btn" onclick="window.open('https://wa.me/6283153883125', '_blank')">💬 Chat via WhatsApp</button>
+    <button class="btn" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
+  </div>
+</div>
+
+<div class="qris-popup" id="qrisPopup">
+  <img src="LINK_QRIS" alt="QRIS">
+  <p>Rek: 1234567890 (BANK ABC a.n Nama Anda)</p>
+  <button class="close-btn" onclick="toggleQris()">Tutup</button>
+</div>
+
+<script>
+  function toggleQris() {
+    document.getElementById('qrisPopup').classList.toggle('show');
+  }
 </script>
-<noscript><i>Javascript required</i></noscript>
 
 </body>
 </html>
-
