--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('LINK_GAMBAR_BACKGROUND') no-repeat center center fixed;
+      background: url('https://files.catbox.moe/unlsdk.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
     }
@@ -77,6 +77,22 @@
       background: #1ebe5a;
     }
 
+    .btn.secondary {
+      background: #3498db;
+    }
+
+    .btn.secondary:hover {
+      background: #2980b9;
+    }
+
+    .btn.qris {
+      background: #f39c12;
+    }
+
+    .btn.qris:hover {
+      background: #e67e22;
+    }
+
     .qris-popup {
       position: fixed;
       top: 50%;
@@ -124,20 +140,22 @@
 
 <div class="overlay">
   <div class="logo-container">
-    <img src="LINK_GAMBAR_LOGO" alt="Logo">
-    <div class="nama">Nama Anda</div>
-    <div class="desc">Deskripsi singkat tentang bisnis atau diri Anda</div>
+    <img src="https://files.catbox.moe/rr8osz.jpg" alt="Logo">
+    <div class="nama">© 𝗙𝘆𝘅𝘇𝗽𝗲𝗱𝗶𝗮 𓅯</div>
+    <div class="desc">𝖣𝖾𝗏𝖾𝗅𝗈𝗉𝖾𝗋 𝖲𝖼𝗋𝗂𝗉𝗍 & 𝖬𝖾𝗇𝗒𝖾𝖽𝗂𝖺𝗄𝖺𝗇 𝖫𝖺𝗒𝖺𝗇𝖺𝗇 𝖧𝗈𝗌𝗍𝗂𝗇𝗀 𝖫𝖾𝗇𝗀𝗄𝖺𝗉 , Daftar list Layanan Lengkap? tekan tombol dibawah</div>
   </div>
 
   <div class="buttons">
     <button class="btn" onclick="window.open('https://wa.me/6283153883125', '_blank')">💬 Chat via WhatsApp</button>
-    <button class="btn" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
+    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k', '_blank')">📎 Testimoni & Daftar jualan</button>
+    <button class="btn qris" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
+    <button class="btn secondary" onclick="window.open('https://files.catbox.moe/psq3yn.jpg', '_blank')">🛒 Suntik Sosmed</button>
   </div>
 </div>
 
 <div class="qris-popup" id="qrisPopup">
-  <img src="LINK_QRIS" alt="QRIS">
-  <p>Rek: 1234567890 (BANK ABC a.n Nama Anda)</p>
+  <img src="https://files.catbox.moe/49y4g8.jpg" alt="QRIS">
+  <p>Rek: 085198699020 (BANK Dana a.n Akhmad Kusaeri)</p>
   <button class="close-btn" onclick="toggleQris()">Tutup</button>
 </div>
 
