--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('https://files.catbox.moe/unlsdk.jpg') no-repeat center center fixed;
+      background: url('https://files.catbox.moe/n0z3sl.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
     }
@@ -140,7 +140,7 @@
 
 <div class="overlay">
   <div class="logo-container">
-    <img src="https://files.catbox.moe/rr8osz.jpg" alt="Logo">
+    <img src="https://files.catbox.moe/n0j3sv.jpg" alt="Logo">
     <div class="nama">© 𝗙𝘆𝘅𝘇𝗽𝗲𝗱𝗶𝗮 𓅯</div>
     <div class="desc">𝖣𝖾𝗏𝖾𝗅𝗈𝗉𝖾𝗋 𝖲𝖼𝗋𝗂𝗉𝗍 & 𝖬𝖾𝗇𝗒𝖾𝖽𝗂𝖺𝗄𝖺𝗇 𝖫𝖺𝗒𝖺𝗇𝖺𝗇 𝖧𝗈𝗌𝗍𝗂𝗇𝗀 𝖫𝖾𝗇𝗀𝗄𝖺𝗉 , Daftar list Layanan Lengkap? tekan tombol dibawah</div>
   </div>
