--- a/index.html
+++ b/index.html
@@ -140,14 +140,15 @@
 
 <div class="overlay">
   <div class="logo-container">
-    <img src="https://files.catbox.moe/n0j3sv.jpg" alt="Logo">
+    <img src="https://files.catbox.moe/rr8osz.jpg" alt="Logo">
     <div class="nama">© 𝗙𝘆𝘅𝘇𝗽𝗲𝗱𝗶𝗮 𓅯</div>
     <div class="desc">𝖣𝖾𝗏𝖾𝗅𝗈𝗉𝖾𝗋 𝖲𝖼𝗋𝗂𝗉𝗍 & 𝖬𝖾𝗇𝗒𝖾𝖽𝗂𝖺𝗄𝖺𝗇 𝖫𝖺𝗒𝖺𝗇𝖺𝗇 𝖧𝗈𝗌𝗍𝗂𝗇𝗀 𝖫𝖾𝗇𝗀𝗄𝖺𝗉 , Daftar list Layanan Lengkap? tekan tombol dibawah</div>
   </div>
 
   <div class="buttons">
     <button class="btn" onclick="window.open('https://wa.me/6283153883125', '_blank')">💬 Chat via WhatsApp</button>
-    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k', '_blank')">📎 Testimoni & Daftar jualan</button>
+    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k', '_blank')">🌐 Testimoni & Daftar jualan</button>
+    <button class="btn" onclick="window.open('https://www.mediafire.com/file/1ix4dice0z21b92/PUSHKONTAK+X+JPM+V3.zip/file', '_blank')">📎 Link Script nya</button>
     <button class="btn qris" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
     <button class="btn secondary" onclick="window.open('https://files.catbox.moe/psq3yn.jpg', '_blank')">🛒 Suntik Sosmed</button>
   </div>
