--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <div class="buttons">
     <button class="btn" onclick="window.open('https://t.me/Fyxznewcuy', '_blank')">💬 Chat via WhatsApp</button>
     <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k', '_blank')">🌐 Testimoni & Daftar jualan</button>
-    <button class="btn" onclick="window.open('https://www.mediafire.com/file/zuz7gtjqlkdld85/PUSH+X+JPM+FYXZPEDIA+NEW+VIP.zip/file', '_blank')">📎 Link Script nya</button>
+    <button class="btn" onclick="window.open('https://www.mediafire.com/folder/2t1ds46ev09z7/KUMPULAN_SC_FREE', '_blank')">📎 link sc free</button>
     <button class="btn" onclick="window.open('https://files.catbox.moe/a6wya3.jpg', '_blank')">🚀 Daftar Harga Panel</button>
     <button class="btn qris" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
     <button class="btn secondary" onclick="window.open('https://files.catbox.moe/psq3yn.jpg', '_blank')">🛒 Suntik Sosmed</button>
