--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body>
 
 <div class="overlay">
-  <div class="logo-container">
+  <div class="logo-container">>
     <img src="https://files.catbox.moe/rr8osz.jpg" alt="Logo">
     <div class="nama">© 𝗙𝘆𝘅𝘇𝗽𝗲𝗱𝗶𝗮 𓅯</div>
     <div class="desc">𝖣𝖾𝗏𝖾𝗅𝗈𝗉𝖾𝗋 𝖲𝖼𝗋𝗂𝗉𝗍 & 𝖬𝖾𝗇𝗒𝖾𝖽𝗂𝖺𝗄𝖺𝗇 𝖫𝖺𝗒𝖺𝗇𝖺𝗇 𝖧𝗈𝗌𝗍𝗂𝗇𝗀 𝖫𝖾𝗇𝗀𝗄𝖺𝗉 , Daftar list Layanan Lengkap? tekan tombol dibawah</div>
@@ -147,7 +147,8 @@
 
   <div class="buttons">
     <button class="btn" onclick="window.open('https://t.me/Fyxznewcuy', '_blank')">💬 Chat via WhatsApp</button>
-    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k', '_blank')">🌐 Testimoni & Daftar jualan</button>
+    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k', '_blank')">🌐 Testimoni 1</button>
+    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb6S58V1noz1Vq0qq40B', '_blank')">🌐 Testimoni 2</button>
     <button class="btn" onclick="window.open('https://www.mediafire.com/folder/2t1ds46ev09z7/KUMPULAN_SC_FREE', '_blank')">📎 link sc free</button>
     <button class="btn" onclick="window.open('https://files.catbox.moe/a6wya3.jpg', '_blank')">🚀 Daftar Harga Panel</button>
     <button class="btn qris" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
