--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
     <button class="btn" onclick="window.open('https://files.catbox.moe/a6wya3.jpg', '_blank')">🚀 Daftar Harga Panel</button>
     <button class="btn qris" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
     <button class="btn secondary" onclick="window.open('https://files.catbox.moe/psq3yn.jpg', '_blank')">🛒 Suntik Sosmed</button>
+    <button class="btn qris" onclick="toggleQris()">🔥 Script Fastbot</button>
+    <button class="btn secondary" onclick="window.open('https://files.catbox.moe/tpxnaw.jpg', '_blank')">🛒 Suntik Sosmed</button>
+  
   </div>
 </div>
 
