--- a/index.html
+++ b/index.html
@@ -151,12 +151,10 @@
     <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb6S58V1noz1Vq0qq40B', '_blank')">🌐 Testimoni 2</button>
     <button class="btn" onclick="window.open('https://www.mediafire.com/folder/2t1ds46ev09z7/KUMPULAN_SC_FREE', '_blank')">📎 link sc free</button>
     <button class="btn" onclick="window.open('https://files.catbox.moe/a6wya3.jpg', '_blank')">🚀 Daftar Harga Panel</button>
+    <button class="btn" onclick="window.open('https://files.catbox.moe/tpxnaw.jpg', '_blank')">🔥 Script Fastbot</button>
     <button class="btn qris" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
     <button class="btn secondary" onclick="window.open('https://files.catbox.moe/psq3yn.jpg', '_blank')">🛒 Suntik Sosmed</button>
-    <button class="btn qris" onclick="toggleQris()">🔥 Script Fastbot</button>
-    <button class="btn secondary" onclick="window.open('https://files.catbox.moe/tpxnaw.jpg', '_blank')">🛒 Suntik Sosmed</button>
-  
-  </div>
+    </div>
 </div>
 
 <div class="qris-popup" id="qrisPopup">
