--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
   </div>
 
   <div class="buttons">
-    <button class="btn" onclick="window.open('https://t.me/Fyxznewcuy', '_blank')">💬 Chat via WhatsApp</button>
+    <button class="btn" onclick="window.open('wa.me/6283153693752', '_blank')">💬 Chat via WhatsApp</button>
+    <button class="btn" onclick="window.open('t.me/Fyxznewcuy', '_blank')">💬 Chat via Telegram</button>
     <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k', '_blank')">🌐 Testimoni 1</button>
     <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb6S58V1noz1Vq0qq40B', '_blank')">🌐 Testimoni 2</button>
     <button class="btn" onclick="window.open('https://www.mediafire.com/folder/2t1ds46ev09z7/KUMPULAN_SC_FREE', '_blank')">📎 link sc free</button>
