--- a/index.html
+++ b/index.html
@@ -146,16 +146,12 @@
   </div>
 
   <div class="buttons">
-    <button class="btn" onclick="window.open('https://wa.me/6283153693752', '_blank')">💬 WhatsApp</button>
-    <button class="btn" onclick="window.open('https://t.me/Fyxznewcuy', '_blank')">💬 Telegram</button>
-    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k', '_blank')">🌐 Testimoni 1</button>
-    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb6S58V1noz1Vq0qq40B', '_blank')">🌐 Testimoni 2</button>
-    <button class="btn" onclick="window.open('https://www.mediafire.com/folder/2t1ds46ev09z7/KUMPULAN_SC_FREE', '_blank')">📎 link sc free</button>
-    <button class="btn" onclick="window.open('https://files.catbox.moe/a6wya3.jpg', '_blank')">🚀 Daftar Harga Panel</button>
-    <button class="btn" onclick="window.open('https://files.catbox.moe/tpxnaw.jpg', '_blank')">📂 Sc Berbayar1</button>
-      <button class="btn" onclick="window.open('https://files.catbox.moe/3zq0qo.jpg', '_blank')">📂 Sc Berbayar2</button>
+    <button class="btn" onclick="window.open('https://t.me/Fyxznewcuy', '_blank')">💬Telegram</button>
+    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb2bwRlLY6d0ljXlNr0k', '_blank')">🌐Testi New</button>
+    <button class="btn" onclick="window.open('https://www.mediafire.com/folder/2t1ds46ev09z7/KUMPULAN_SC_FREE', '_blank')">🔥Script free</button>
+    <button class="btn" onclick="window.open('https://files.catbox.moe/a6wya3.jpg', '_blank')">⛅List Panel</button>
     <button class="btn qris" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
-    <button class="btn secondary" onclick="window.open('https://files.catbox.moe/psq3yn.jpg', '_blank')">🛒 Suntik Sosmed</button>
+    <button class="btn secondary" onclick="window.open('https://files.catbox.moe/psq3yn.jpg', '_blank')">🛒Suntik Sosmed</button>
     </div>
 </div>
 
