--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <div class="buttons">
     <button class="btn" onclick="window.open('https://t.me/Fyxznewcuy', '_blank')">💬 Telegram</button>
-    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb6S58V1noz1Vq0qq40B', '_blank')">🌐 Testi New</button>
+    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb6S58V1noz1Vq0qq40B', '_blank')">🌎 Testimoni</button>
     <button class="btn" onclick="window.open('https://www.mediafire.com/folder/2t1ds46ev09z7/KUMPULAN_SC_FREE', '_blank')">🔥 Script Free</button>
     <button class="btn qris" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
     <button class="btn listpanel" onclick="toggleListPanel()">📋 List Panel</button>
@@ -158,7 +158,7 @@
 
 <div class="qris-popup" id="listPanelPopup">
   <img src="https://files.catbox.moe/a6wya3.jpg" alt="List Panel">
-  <p>Tekan tombol tutup untuk kembali.</p>
+  <p>Bergaransi Full Dan Berkualitas tinggi</p>
   <button class="close-btn" onclick="toggleListPanel()">Tutup</button>
 </div>
 
