--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 
     .buttons {
       margin-top: 30px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 15px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
       width: 100%;
       max-width: 600px;
       animation: fadeInUp 1.2s ease;
@@ -68,7 +69,9 @@
     .btn {
       background: #25d366;
       border: none;
-      padding: 12px 20px;
+      flex: 0 1 150px;
+      font-size: 14px;
+      padding: 10px 14px;
       color: white;
       border-radius: 30px;
       font-weight: bold;
