--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('https://files.catbox.moe/gl145d.jpg') no-repeat center center fixed;
+      background: url('https://files.catbox.moe/30e40m.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
     }
