--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <button class="btn qris" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
     <button class="btn listpanel" onclick="toggleListPanel()">📋 List Panel</button>
     <button class="btn sosmed" onclick="toggleSosmed()">🛒 Suntik Sosmed</button>
-    <button class="btn secondary" onclick="toggleReseller()">📦 Join Reseller Panel</button>
+    <button class="btn secondary" onclick="toggleReseller()">📦 Reseller / Admin Panel</button>
   </div>
 </div>
 
@@ -181,11 +181,11 @@
 <!-- POP-UP: Reseller Panel -->
 <div class="qris-popup" id="resellerPopup">
   <p style="text-align:left; font-size:14px; max-width:400px; margin:auto;">
-    📢 <strong>APA ITU RESELLER PANEL?</strong><br>
+    📢 <strong>APA ITU RESELLER PANEL? / ADMIN PANEL? </strong><br>
     Reseller Panel adalah sistem di mana kamu bisa jualan layanan digital (panel hosting, bot, tools, dll) dengan menggunakan akses panel dari kami.<br><br>
-    Kamu bebas atur harga sendiri, buat akun panel untuk pelangganmu, dan ambil untung sebanyak mungkin!
+    Kamu bebas atur harga sendiri, buat akun panel untuk pelangganmu, dan ambil untung sebanyak mungkin! ( kalo admin Panel punya kelebihan yaitu bisa open Reseller panel
     <br><br>
-    🔥 <strong>DAFTAR RESELLER PANEL SEKARANG – AKSES PERMANEN!</strong><br><br>
+    🔥 <strong>DAFTAR RESELLER PANEL / ADMIN PANEL SEKARANG – AKSES PERMANEN!</strong><br><br>
 
     💠 <strong>Spesifikasi Server PREMIUM:</strong><br>
     🧠 RAM 32GB DDR4 – Super Cepat<br>
@@ -195,15 +195,18 @@
     🔧 Support: Node.js, Python, Java, API, Bot WhatsApp, Tools, Hosting, DLL<br>
     🔐 Uptime 99.9%, Anti Suspend, Anti Lag
     <br><br>
-    🎁 <strong>FITUR RESELLER PANEL:</strong><br>
+    🎁 <strong>𝗙𝗜𝗧𝗨𝗥 𝗥𝗘𝗦𝗘𝗟𝗟𝗘𝗥 / 𝗔𝗗𝗠𝗜𝗡 𝗣𝗔𝗡𝗘𝗟trong><br>
     ✅ Bisa Buat Akun Panel untuk Pelangganmu<br>
     ✅ Atur Harga Jual Sendiri – Bebas Untung<br>
     ✅ Panel Full Pterodactyl<br>
     ✅ Unlimited Project / Bot / Hosting<br>
     ✅ Gratis Bantuan, Panduan, & Update<br>
     ✅ Cocok Buat Pemula & Profesional
+      ————————————
+    ✅ 𝗙𝗶𝘁𝘂𝗿 𝗞𝗵𝘂𝘀𝘂𝘀 𝗔𝗱𝗺𝗶𝗻 𝗣𝗮𝗻𝗲𝗹 : 𝗯𝗶𝘀𝗮 𝗢𝗽𝗲𝗻 𝗿𝗲𝘀𝗲𝗹𝗹𝗲𝗿 𝗽𝗮𝗻𝗲𝗹
     <br><br>
-    💰 <strong>HARGA DAFTAR RESELLER: CUMA Rp 10.000 SEKALI BAYAR</strong><br>
+    💰 <strong>HARGA DAFTAR RESELLER: CUMA Rp 10.000 SEKALI BAYAR
+    HARGA DAFTAR ADMIN PANEL: CUMA 15.000</strong><br>
     ✔️ Tanpa Biaya Bulanan<br>
     ✔️ Akses Selamanya<br>
     ✔️ Bisa Jualan Langsung!
