--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
       ————————————
     ✅ 𝗙𝗶𝘁𝘂𝗿 𝗞𝗵𝘂𝘀𝘂𝘀 𝗔𝗱𝗺𝗶𝗻 𝗣𝗮𝗻𝗲𝗹 : 𝗯𝗶𝘀𝗮 𝗢𝗽𝗲𝗻 𝗿𝗲𝘀𝗲𝗹𝗹𝗲𝗿 𝗽𝗮𝗻𝗲𝗹
     <br><br>
-    💰 <strong>HARGA DAFTAR RESELLER: CUMA Rp 10.000 SEKALI BAYAR
-    HARGA DAFTAR ADMIN PANEL: CUMA 15.000</strong><br>
+    💰 <strong>HARGA DAFTAR RESELLER: CUMA Rp 10.000</strong><br>
+    💰 <strong>HARGA DAFTAR ADMIN P: CUMA Rp 15.000</strong><br>
     ✔️ Tanpa Biaya Bulanan<br>
     ✔️ Akses Selamanya<br>
     ✔️ Bisa Jualan Langsung!
