--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
 <!-- POP-UP: Reseller Panel -->
 <div class="qris-popup" id="resellerPopup">
   <p style="text-align:left; font-size:14px; max-width:400px; margin:auto;">
-    📢 <strong>APA ITU RESELLER PANEL? / ADMIN PANEL? </strong><br>
+    📢 <strong>APA ITU RESELLER PANEL? & ADMIN PANEL?</strong><br>
     Reseller Panel adalah sistem di mana kamu bisa jualan layanan digital (panel hosting, bot, tools, dll) dengan menggunakan akses panel dari kami.<br><br>
     Kamu bebas atur harga sendiri, buat akun panel untuk pelangganmu, dan ambil untung sebanyak mungkin! ( kalo admin Panel punya kelebihan yaitu bisa open Reseller panel
     <br><br>
-    🔥 <strong>DAFTAR RESELLER PANEL / ADMIN PANEL SEKARANG – AKSES PERMANEN!</strong><br><br>
+    🔥 <strong>DAFTAR RESELLER PANEL & ADMIN PANEL SEKARANG – AKSES PERMANEN!</strong><br><br>
 
     💠 <strong>Spesifikasi Server PREMIUM:</strong><br>
     🧠 RAM 32GB DDR4 – Super Cepat<br>
@@ -201,7 +201,7 @@
     ✅ Panel Full Pterodactyl<br>
     ✅ Unlimited Project / Bot / Hosting<br>
     ✅ Gratis Bantuan, Panduan, & Update<br>
-    ✅ Cocok Buat Pemula & Profesional
+    ✅ Cocok Buat Pemula & Profesional<br>
       ————————————
     ✅ 𝗙𝗶𝘁𝘂𝗿 𝗞𝗵𝘂𝘀𝘂𝘀 𝗔𝗱𝗺𝗶𝗻 𝗣𝗮𝗻𝗲𝗹 : 𝗯𝗶𝘀𝗮 𝗢𝗽𝗲𝗻 𝗿𝗲𝘀𝗲𝗹𝗹𝗲𝗿 𝗽𝗮𝗻𝗲𝗹
     <br><br>
