--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Profil Bisnis - Fyxzpedia</title>
+  <title>𝗣𝗿𝗼𝗳𝗶𝗹 𝗕𝗶𝘀𝗻𝗶𝘀 - 𝗙𝘆𝘅𝘇𝗽𝗲𝗱𝗶𝗮</title>
   <style>
     body {
       margin: 0;
@@ -195,7 +195,7 @@
     🔧 Support: Node.js, Python, Java, API, Bot WhatsApp, Tools, Hosting, DLL<br>
     🔐 Uptime 99.9%, Anti Suspend, Anti Lag
     <br><br>
-    🎁 <strong>𝗙𝗜𝗧𝗨𝗥 𝗥𝗘𝗦𝗘𝗟𝗟𝗘𝗥 / 𝗔𝗗𝗠𝗜𝗡 𝗣𝗔𝗡𝗘𝗟trong><br>
+    🎁 <strong>𝗙𝗜𝗧𝗨𝗥 𝗥𝗘𝗦𝗘𝗟𝗟𝗘𝗥 & 𝗔𝗗𝗠𝗜𝗡 𝗣𝗔𝗡𝗘𝗟</strong><br>
     ✅ Bisa Buat Akun Panel untuk Pelangganmu<br>
     ✅ Atur Harga Jual Sendiri – Bebas Untung<br>
     ✅ Panel Full Pterodactyl<br>
