--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <button class="btn" onclick="window.open('https://t.me/Fyxzpedia', '_blank')">💬 Telegram</button>
     <button class="btn" onclick="window.open('https://youtube.com/@fyxzknodtod?si=6rFM6KgCsEcYXKoF', '_blank')">☕ YouTube</button>
     <button class="btn" onclick="window.open('https://www.tiktok.com/@fyxzknodtod?_t=ZS-8yPCkiNnscK&_r=1', '_blank')">🎨 Tiktok</button>
-    <button class="btn" onclick="window.open('https://https://whatsapp.com/channel/0029Vb6O4Wd6GcGEWNvexE0v', '_blank')">🌎 Testimoni</button>
+    <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029Vb6O4Wd6GcGEWNvexE0v', '_blank')">🌎 Testimoni</button>
     <button class="btn" onclick="window.open('https://www.mediafire.com/folder/6oo1xym96zc4p/SCRIPT+FREE', '_blank')">🔥 Script Free</button>
     <button class="btn qris" onclick="toggleQris()">💳 Pembayaran / QRIS</button>
     <button class="btn listpanel" onclick="toggleListPanel()">📋 List Panel</button>
